fixed slider white space and <3 videos bugs

--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -148,6 +148,10 @@ button{
 
 }
 
+.reactionDiv{
+  display:inline-block;
+}
+
 .reactionVid{
     border-radius:5%;
 
@@ -157,7 +161,7 @@ button{
   width: 100%;
   text-align: center;
   position:relative;
-  height:350px;
+  max-height:350px;
 }
 
 #title {
@@ -308,8 +312,3 @@ h3{
   margin-right:auto;
   display:in-line block;
 }
-
-.slick-prev, .slick-next{
-  font-size:100pt;
-}
-
